# fast_mold_fastapi

./: .gitignore  alembic.ini  db.sqlite3-shm  db.sqlite3-wal  helper.py  log_config.py  main.py  pyproject.toml  requirements.txt  test.db
app/: api.py  crud.py  database.py
app---00/: api.py  crud.py  schemas.py
app/models/: users.py
auth/: auth_config.py  router.py
fastapi_users/: models.py  password.py
fastapi_users/authentication/: jwt.py
fastapi_users/db/: base.py  tortoise.py
migrations/: env.py
migrations/versions/: a6a3226379c4_added_account_table.py
models/: db_users.py  model.py  user.py
schemas/: sch_users.py
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
src/alembic/: env.py
src/app/: routers.py
src/app/auth/: api.py  jwt.py  models.py  permissions.py  schemas.py  security.py  send_email.py  service.py
src/app/base/: helpers.py  models.py  models_base.py  router_base.py  schemas_base.py  service.py  service_base.py  service_base_alchemy.py
src/app/base/utils/: email.py  utils.py
src/app/base/viewsets/: __init__.py  dependencies.py  generics.py  mixins.py  sql.py
src/app/handbook/: mat_router.py  mat_schema.py  mat_service.py  schemas.py  service.py
src/app/handbook/endpoint/: handbook.py
src/app/handbook/models/: __init__.py  common_data.py  (+2 more)
src/app/user/: models.py  schemas.py  schemas_alchemy.py  service.py  service_alchemy.py
src/config/: alembic_models.py  ormar_settings.py  settings.py  sqlalchemy_conf.py  tortoise_conf.py
src/templates/: index.html  reset_password.html
templates/: index.html
(+9 files in other folders)
