[tool.poetry]
name = "fast_mold_fastapi"
version = "0.1.0"
description = ""
authors = ["yderevyannyh <youriywoodman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.63.0"}
PyJWT = "^2.0.1"
passlib = "^1.7.4"
httpx = "^0.16.1"
typer = "^0.3.2"
psycopg2-binary = "^2.8.6"
emails = "^0.6"
loguru = "^0.5.3"
python-dotenv = "^0.15.0"
fastapi-utils = "^0.2.1"
Babel = "^2.9.0"
SQLAlchemy-Utils = "^0.36.8"
phonenumbers = "^8.12.17"
alembic = "^1.5.4"
SQLAlchemy = "^1.3.23"
asyncpg = "^0.21.0"
databases = {extras = ["postgresql"], version = "^0.4.1"}
ormar = "^0.9.2"
pycountry = "^20.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
